--- a/station101.html
+++ b/station101.html
@@ -52,21 +52,22 @@
 		
 	
 		<p>Erich Heckel: Bordeaux, 1929, Privatbesitz</p>
-		<audio controls="" autoplay="" name="media"><source src="mp3/DEU_ERW_108.mp3" type="audio/mpeg"></audio>
+		<audio controls="" autoplay="" name="media">
+			<source src="mp3/DEU_ERW_108.mp3" type="audio/mpeg" >
+		</audio>
 		
 		
 		
-			</div>	<!-- /.hauptnavigation -->
-		</div>	<!-- /.bottom-wrapper -->	
+		
+	
 			
 			
-		</div><!-- /container -->
+		
 					
 
 			
 		
 
-		</div>
 		
 <!-- Skriptaufrufe -->
 		<script>
