norm Pfad auskomentiert

--- a/station101.html
+++ b/station101.html
@@ -71,8 +71,8 @@
 		<article>
 	
 		<p>Erich Heckel: Bordeaux, 1929, Privatbesitz</p>
-		<audio controls="" autoplay="" loop name="media">
-			<source src="mp3/DEU_ERW_108.mp3" type="audio/mpeg" >
+		<audio controls=""  name="media">
+			<!-- <source src="mp3/DEU_ERW_108.mp3" type="audio/mpeg" > -->
 				<source src="/android_asset/www/mp3/DEU_ERW_108.mp3" type="audio/mpeg" >
 					
 					
@@ -85,7 +85,7 @@
 		<article>
 			<h2>Audio</h2>
 			<audio controls id="myplayer">
-				<source src="http://html5multimedia.com/media/sayHello.mp3">
+				<source src="https://one.delius-books.de/sixcms/media.php/166/ENG%20108.mp3">
 				<source src="http://html5multimedia.com/media/sayHello.ogg">
 					<!--
 				<object type="application/x-shockwave-flash" data="player.swf" height="24" width="320">
