experiment mit media

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 			<a data-link="file" data-title="Rundgang" data-extras='{"bookmarklink": true }' href="guide.html" class="custom-nav-bg">
 			<span class="list-title custom-font-bold">Rundgang</span>
 			</a>
-		
+			
+		<a data-link="file" data-title="Station 101" data-extras='{"bookmarklink": true }' href="station101.html" class="custom-nav-bg">
+			<span class="list-title custom-font-bold">Rundgang</span>
+			</a>
 			
 			<a data-link="native" data-title="Dürer für Kinder" data-extras='{"contentversion": 5, "contentsize": "205"}' href="children.html" class="custom-nav-bg">
 			<span class="list-title custom-font-bold">Kindertour</span>
