--- a/station101.html
+++ b/station101.html
@@ -71,7 +71,7 @@
 		<article>
 	
 		<p>Erich Heckel: Bordeaux, 1929, Privatbesitz</p>
-		<audio controls=""  name="media">
+		<audio controls  name="media">
 			<!-- <source src="mp3/DEU_ERW_108.mp3" type="audio/mpeg" > -->
 				<source src="/android_asset/www/mp3/DEU_ERW_108.mp3" type="audio/mpeg" >
 					
@@ -97,8 +97,9 @@
 			</audio>
 			
 			<h2>Audio via Video</h2>
+			<img src="/media/icon.jpg">
 			<video id="video" controls>
-				<source src="http://html5multimedia.com/media/sayHello.mp3">
+				<source src="/media/DEU_ERW_108.mp3" type="audio/mpeg" >
 			</video>
 			
 		</article>	
