--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</a>
 			
 		<a data-link="file" data-title="Station 101" data-extras='{"bookmarklink": true }' href="station101.html" class="custom-nav-bg">
-			<span class="list-title custom-font-bold">Rundgang</span>
+			<span class="list-title custom-font-bold">Station 101</span>
 			</a>
 			
 			<a data-link="native" data-title="Dürer für Kinder" data-extras='{"contentversion": 5, "contentsize": "205"}' href="children.html" class="custom-nav-bg">
