--- a/station101.html
+++ b/station101.html
@@ -97,9 +97,9 @@
 			</audio>
 			
 			<h2>Audio via Video</h2>
-			<img src="/media/icon.jpg">
+			<img src="file:///media/icon.jpg">
 			<video id="video" controls>
-				<source src="/media/DEU_ERW_108.mp3" type="audio/mpeg" >
+				<source src="file:///media/DEU_ERW_108.mp3" type="audio/mpeg" >
 			</video>
 			
 		</article>	
