--- a/station101.html
+++ b/station101.html
@@ -26,7 +26,8 @@
 			
 			
 			<script src="res/jquery-2.1.1.js" type="text/javascript"></script>
-			<script src="res/jquery.backstretch.min.js" type="text/javascript"></script> 
+			<script src="res/jquery.backstretch.min.js" type="text/javascript"></script>
+			<script src="res/meineskripte.js" type="text/javascript"></script> 
 			<!-- <script src="res/jquery.mobile-1.4.3.min.js" type="text/javascript"></script>		-->
 
 
@@ -91,6 +92,20 @@
 		
 		
 		</article>
+		
+		<article>
+			 <h2>JS mediaplayer</h2>
+			 <p>
+			 	<button id="p">Play</button>
+			 	<button id="s">Stop</button>
+			 	<button id="pa">Pause</button>
+			 
+			 </p>
+			 
+			 <p> <div id="dauer"><span id="gesamtdauer"></span><span id="pos"></span></div></p>
+		</article>		
+		
+		
 		<article>
 			<h2>Audio 2 http</h2>
 			<audio controls id="myplayer">
